# iioutils

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  iio.h  iio_ring.c  lsiio.8  lsiio.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lib/: iio_utils.c
