#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(iioutils, 0.2)

AC_CONFIG_SRCDIR([lsiio.c])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE(-Wall)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

# Checks for libraries.

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h math.h stdlib.h string.h sys/ioctl.h sys/param.h unistd.h getopt.h errno.h ])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([getcwd isnan memset getopt_long strchr strerror strstr strtoul uname])
AC_CHECK_LIB(sysfs, sysfs_open_class, ,
	[AC_MSG_ERROR(get libsysfs 2.0.1 or newer)])

AM_MAINTAINER_MODE
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
